Fully configured Spring Security + added JWT and tested these two modules via API.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,4 +11,6 @@ spring:
       hbm2ddl.auto: validate
     open-in-view: false
   config:
-    import: classpath:public-urls.properties
+    import:
+      - classpath:public-urls.properties
+      - classpath:token.properties
