--- a/src/main/resources/public-urls.properties
+++ b/src/main/resources/public-urls.properties
@@ -2,6 +2,7 @@ public.urls=\
   /login,\
   /registration,\
   /js/**,\
-  /api/v1/users/login,\
-  /api/v1/users/registration,\
+  /auth/login,\
+  /auth/registration,\
+  /v3/api-docs,\
   /swagger-ui/**
